fix font-size on add new task (on mobile)

--- a/src/styles/components/_columns.scss
+++ b/src/styles/components/_columns.scss
@@ -56,6 +56,10 @@
     &::placeholder {
       opacity: 0.3;
     }
+
+    @include respond(mobile) {
+      font-size: $font-size-lg;
+    }
   }
 }
 
